<resources><string name="ApplicationName">ALTGEO Relay Service</string><string name="LoadSubscription">Load Subscription</string><string name="Subscription">Subscription</string><string name="Sensor">Sensor</string><string name="Connect">Connect</string><string name="Disconnect">Disconnect</string><string name="Survey">Survey</string><string name="StartSurvey">Start</string><string name="EndSurvey">End</string><string name="Position">Position</string><string name="Ntrip">Ntrip Settings</string><string name="UserName">UserName</string><string name="Password">Password</string><string name="NtripSource">Source</string><string name="NtripServer">Server</string><string name="Port">Port</string><string name="SolutionType">SolutionType:</string><string name="Latitude">Latitude:</string><string name="Longitude">Longitude:</string><string name="Degree">\u00B0</string><string name="Empty">0.000</string><string name="Height">Height:</string><string name="GroundPositionType">GroundPositionType:</string><string name="HPrecision">HPrecision:</string><string name="VPrecision">VPrecision:</string><string name="SigmaSemiMajorAxis">Sigma Semi Major Axis:</string><string name="SigmaSemiMinorAxis">Sigma Semi Minor Axis:</string><string name="SigmaOrientation">Sigma Orientation:</string><string name="NoOfSatellites">Satellites used / tracked:</string><string name="CorrectionAge">CorrectionAge:</string><string name="ReceivedCorrectionData">ReceivedCorrectionData:</string><string name="StationID">StationID:</string><string name="IsTransformed">IsTransformed:</string><string name="SourceReferenceFrame">Source Reference Frame:</string><string name="SourceEpoch">Source Epoch:</string><string name="OutputReferenceFrame">Output Reference Frame:</string><string name="OutputEpoch">Output Epoch:</string><string name="StaticEpoch">Static Epoch:</string><string name="Elevation">Elevation:</string><string name="RunGetNtripSourceList">Run Get Ntrip Source List</string><string name="GetNtripSourceList">Get Ntrip Source List</string><string name="Status">Status</string><string name="SurveyType">Survey Type</string><string name="MarkPoints">Mark Points</string><string name="ClearMarking">Clear Marking</string><string name="Transformation">Transformation</string><string name="TargetFrameType">Target Frame Type</string><string name="TargetFrameID">Target Frame ID</string><string name="Geoid">Geoid</string><string name="FilePath">File Path</string><string name="Antenna">Antenna</string><string name="ReducedAntennaHght">Reduced Antenna Height</string><string name="RtkConnectionStatus">RTK Connection Status</string><string name="DeviceType">Device Type</string><string name="ConnectionType">Connection Type</string><string name="DeviceAddress">Device Address</string><string name="Search">Search</string><string name="ButtonBtPaired">Show Paired</string><string name="ButtonBtselectScan">Scan</string><string name="GoStatic">Go Static:</string><string name="SubscriptionType">Subscription Type</string><string name="DeviceConfig">Device Configuration</string><string name="CorrectionSource">Correction Source Configuration</string><string name="DriverType">Driver</string><string name="SatelliteSummary">Satellite Summary</string><string name="GPS">G</string><string name="GLONASS">R</string><string name="BEIDOU">C</string><string name="GALILEO">E</string><string name="SatelliteDefSummary">0/0</string><string name="SBAS">S</string><string name="QZSS">J</string><string name="IRNSS">I</string><string name="SatelliteType">Type</string><string name="SummaryTitle">Used/Tracked</string><string name="CheckOnDemand">Check On Demand</string><string name="ChangeCorrectionSourceSettings">Correction Source Settings</string><string name="DeviceSerialNumber">Host Device Serial:</string><string name="InstallRTXSubscription">Code for RTX Subscription:</string><string name="Install">Install</string><string name="ExternalReceiverBatteryLevel">External Receiver Battery Level</string><string name="GeoidModel">Geoid Model:</string><string name="GPSTime">Gps Time:</string><string name="UTCTime">Utc Time:</string><string name="EnableLogs">Enable Driver Logs</string><string name="ExportLogs">Export Driver Logs</string><string name="MailLog">Email Position Logfile</string><string name="OpenFacadeLog">Open Facade Logfile</string><string name="ChooseFile">Choose File</string><string name="IMUState">IMU State:</string><string name="Pitch">Pitch:</string><string name="Roll">Roll:</string><string name="Yaw">Yaw:</string><string name="PitchPrecision">Pitch Precision:</string><string name="RollPrecision">RollPrecision:</string><string name="YawPrecision">Yaw Precision:</string><string name="LastApiRequestResponse">Last API Request/Response</string><string name="RequestPayload">Request Payload:</string><string name="ApiResponse">Response:</string><string name="ApiStatus">Status:</string><string name="NoDataSentYet">No data sent yet</string><string name="NoResponseYet">No response yet</string><string name="NoStatus">No status</string></resources>