<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"><include android:id="@+id/Toolbar" layout="@layout/toolbar" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="#C0C0C0"><TextView android:text="@string/Subscription" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/txtSubscription" android:gravity="center_vertical" android:paddingRight="5dp" /><LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="match_parent" android:background="@drawable/roundedrectgrey" android:gravity="center_vertical" android:id="@+id/layoutLicStatus"><TextView android:text="@string/Status" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/txtLicStatus" android:textColor="#000000" android:gravity="center" /></LinearLayout></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><Button android:id="@+id/btnLoadSubscription" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LoadSubscription" /><Button android:id="@+id/btnRelayService" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="Start Relay" /><EditText android:id="@+id/txtSimple" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:hint="Simple text box" /><Button android:id="@+id/btnCheckOnDemand" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CheckOnDemand" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#C0C0C0"><TextView android:text="@string/Sensor" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/txtSensor" android:gravity="center_vertical" android:paddingRight="5dp" /><LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="match_parent" android:background="@drawable/roundedrectgrey" android:gravity="center_vertical" android:id="@+id/layoutSensorStatus"><TextView android:text="@string/Status" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtSensorStatus" android:textColor="#000000" android:gravity="center" /></LinearLayout></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><Button android:id="@+id/btnConnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Connect" /><Button android:id="@+id/btnDisconnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Disconnect" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ExternalReceiverBatteryLevel" android:id="@+id/txtExternalReceiverBatteryLevel" android:paddingLeft="5dp" android:paddingRight="5dp" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:id="@+id/txtExternalReceiverBatteryLevelValue" android:paddingLeft="15dp" android:paddingRight="5dp" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#C0C0C0"><TextView android:text="@string/Survey" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/txtSurvey" android:gravity="center_vertical" android:paddingRight="5dp" /><LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="match_parent" android:background="@drawable/roundedrectgrey" android:gravity="center_vertical" android:id="@+id/layoutSurveyStatus"><TextView android:text="@string/Status" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtSurveyStatus" android:textColor="#000000" android:gravity="center" /></LinearLayout></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:id="@+id/btnChangeCorrectionSourceSettings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ChangeCorrectionSourceSettings" /><Button android:id="@+id/btnGetNtripSourceList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/GetNtripSourceList" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><Button android:id="@+id/btnStartSurvey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/StartSurvey" /><Button android:id="@+id/btnEndSurvey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EndSurvey" /></LinearLayout></LinearLayout><LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/SurveyType" android:id="@+id/lblRtkSurveyType" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="5dp" /><TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="" android:id="@+id/txtRtkSurveyTypeValue" android:paddingLeft="5dp" android:paddingRight="5dp" /><TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/RtkConnectionStatus" android:id="@+id/lblRtkConnectionStatus" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="10dp" /><TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="" android:id="@+id/txtRtkConnectionStatusValue" android:paddingLeft="5dp" android:paddingRight="5dp" /></LinearLayout></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#C0C0C0" android:gravity="center_vertical"><TextView android:text="@string/Position" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtPosition" android:paddingRight="5dp" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><Button android:id="@+id/btnMarkPoints" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MarkPoints" /><Button android:id="@+id/btnClearMarking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ClearMarking" /><TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtMarker" android:paddingRight="5dp" /><TextView android:id="@+id/txtGoStatic" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/GoStatic" /><Switch android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/switchGoStatic" /></LinearLayout><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"><ScrollView android:id="@+id/lstSatellites" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fillViewport="false"><TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:stretchColumns="2"><TableRow android:layout_width="match_parent" android:layout_height="match_parent"><TextView android:padding="3dip" android:text="@string/SatelliteSummary" android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="bold" android:layout_span="2" /></TableRow><TableRow android:layout_width="match_parent" android:layout_height="match_parent"><TextView android:padding="3dip" android:text="@string/SatelliteType" /><TextView android:id="@+id/txtSummary" android:gravity="left" android:padding="3dip" android:text="@string/SummaryTitle" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/GPS" /><TextView android:id="@+id/txtGpsSummary" android:gravity="left" android:padding="3dip" android:text="@string/SatelliteDefSummary" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/GLONASS" /><TextView android:id="@+id/txtGlonassSummary" android:gravity="left" android:padding="3dip" android:text="@string/SatelliteDefSummary" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/BEIDOU" /><TextView android:id="@+id/txtBeidouSummary" android:gravity="left" android:padding="3dip" android:text="@string/SatelliteDefSummary" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/GALILEO" /><TextView android:id="@+id/txtGalileoSummary" android:gravity="left" android:padding="3dip" android:text="@string/SatelliteDefSummary" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/SBAS" /><TextView android:id="@+id/txtSbasSummary" android:gravity="left" android:padding="3dip" android:text="@string/SatelliteDefSummary" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/QZSS" /><TextView android:id="@+id/txtQzssSummary" android:gravity="left" android:padding="3dip" android:text="@string/SatelliteDefSummary" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/IRNSS" /><TextView android:id="@+id/txtIrnssSummary" android:gravity="left" android:padding="3dip" android:text="@string/SatelliteDefSummary" /></TableRow></TableLayout></ScrollView><ScrollView android:id="@+id/lstPosition" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="false"><TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:stretchColumns="2"><TableRow><TextView android:padding="3dip" android:text="@string/SolutionType" /><TextView android:id="@+id/txtSolutionType" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/Latitude" /><TextView android:id="@+id/txtLatitude" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/Longitude" /><TextView android:id="@+id/txtLongitude" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/Height" /><TextView android:id="@+id/txtHeight" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/GroundPositionType" /><TextView android:id="@+id/txtGroundPositionType" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/HPrecision" /><TextView android:id="@+id/txtHPrecision" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/VPrecision" /><TextView android:id="@+id/txtVPrecision" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/SigmaSemiMajorAxis" /><TextView android:id="@+id/txtSigmaSemiMajorAxis" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/SigmaSemiMinorAxis" /><TextView android:id="@+id/txtSigmaSemiMinorAxis" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/SigmaOrientation" /><TextView android:id="@+id/txtSigmaOrientation" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/IMUState" /><TextView android:id="@+id/txtIMUState" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/Pitch" /><TextView android:id="@+id/txtPitch" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/Roll" /><TextView android:id="@+id/txtRoll" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/Yaw" /><TextView android:id="@+id/txtYaw" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/PitchPrecision" /><TextView android:id="@+id/txtPitchPrecision" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/RollPrecision" /><TextView android:id="@+id/txtRollPrecision" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/YawPrecision" /><TextView android:id="@+id/txtYawPrecision" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/NoOfSatellites" /><TextView android:id="@+id/txtNoOfSatellites" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/StaticEpoch" /><TextView android:id="@+id/txtStaticEpoch" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/CorrectionAge" /><TextView android:id="@+id/txtCorrectionAge" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/ReceivedCorrectionData" /><TextView android:id="@+id/txtReceivedCorrectionData" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/StationID" /><TextView android:id="@+id/txtStationID" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/IsTransformed" /><TextView android:id="@+id/txtIsTransformed" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/SourceReferenceFrame" /><TextView android:id="@+id/txtSourceReferenceFrame" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/SourceEpoch" /><TextView android:id="@+id/txtSourceEpoch" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/OutputReferenceFrame" /><TextView android:id="@+id/txtOutputReferenceFrame" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/OutputEpoch" /><TextView android:id="@+id/txtOutputEpoch" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/Elevation" /><TextView android:id="@+id/txtElevation" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/GeoidModel" /><TextView android:id="@+id/txtGeoidModel" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/GPSTime" /><TextView android:id="@+id/txtGPSTime" android:gravity="left" android:padding="3dip" /></TableRow><TableRow><TextView android:padding="3dip" android:text="@string/UTCTime" /><TextView android:id="@+id/txtUTCTime" android:gravity="left" android:padding="3dip" /></TableRow></TableLayout></ScrollView></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="#E0E0E0" android:padding="5dp" android:layout_marginTop="10dp"><TextView android:text="Last API Request/Response" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp" android:textStyle="bold" android:background="#C0C0C0" /><ScrollView android:layout_width="match_parent" android:layout_height="400dp" android:background="#FFFFFF" android:padding="5dp"><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:text="Request Payload:" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:padding="3dp" /><TextView android:id="@+id/txtLastApiPayload" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp" android:text="No data sent yet" android:textSize="10sp" android:fontFamily="monospace" android:background="#F5F5F5" /><TextView android:text="Response:" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:padding="3dp" android:layout_marginTop="5dp" /><TextView android:id="@+id/txtLastApiResponse" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp" android:text="No response yet" android:textSize="10sp" android:fontFamily="monospace" android:background="#F5F5F5" /><TextView android:text="Status:" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:padding="3dp" android:layout_marginTop="5dp" /><TextView android:id="@+id/txtLastApiStatus" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp" android:text="No status" android:textSize="10sp" android:fontFamily="monospace" android:background="#F5F5F5" /><TextView android:text="Logs:" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:padding="3dp" android:layout_marginTop="5dp" /><TextView android:id="@+id/txtLastApiLogs" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp" android:text="No logs yet" android:textSize="9sp" android:fontFamily="monospace" android:background="#F5F5F5" android:maxLines="100" android:scrollbars="vertical" /></LinearLayout></ScrollView></LinearLayout></LinearLayout></ScrollView>